--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.3",
+    "vee-validate": "^4.9.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
