--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.9.6",
     "pinia": "^2.1.3",
     "vee-validate": "^4.9.6",
     "vue": "^3.3.4",
